rnsc/test_data/integration/error/parser/class_header/access_flags/all_invalid.rns
.class private protected synchronized bridge varargs native strict HelloWorld
.super java/lang/Object
.class_end
